--- a/vignettes/Manual.Rnw
+++ b/vignettes/Manual.Rnw
@@ -15,7 +15,7 @@ BiocStyle::latex()
 \usepackage{epsfig}
 \usepackage{color}
 \usepackage{psfrag}
-
+\usepackage{sectsty}
 \usepackage[english]{babel}
 \usepackage{rotating}
 \usepackage{rotate}
@@ -70,31 +70,13 @@ If you use the samExploreR package, please cite \cite{alexey} and \cite{liao2013
 
 
 
-SamExploreR depends on some R package available in CRAN that need to be installed before you can use the package. The symbol '>' indicates the R prompt. 
+SamExploreR depends on some R package available in Bioconductor that need to be installed before you can use the package. The symbol '>' indicates the R prompt. 
 
-1)	ggplot2: package available at
-http://cran.r-project.org/web/packages/ggplot2/index.html
-
+<<install-library, eval=FALSE>>=
+source("https://bioconductor.org/biocLite.R")
+biocLite("samExploreR")
+@
 Installation command: call the following command from an R prompt.
-\begin{verbatim}
-> install.packages("ggplot2")
-\end{verbatim}
-
-2)	pBrackets: package available at
-http://cran.r-project.org/web/packages/pBrackets/index.html
-
-Installation command: call the following command from an R prompt.
-\begin{verbatim}
-> install.packages("pBrackets")
-\end{verbatim}
-
-3)	colorspace: package available at
-http://cran.r-project.org/web/packages/colorspace/index.html
-
-Installation command: call the following command from an R prompt.
-\begin{verbatim}
-> install.packages("colorspace")
-\end{verbatim}
 
 
 
@@ -102,28 +84,10 @@ Installation command: call the following command from an R prompt.
 
 If a user wants to make changes to the package and rebuild it again, then the following packages need to be installed additionally. These are necessary for the compilation and the building the package. 
 
-1)BiocCheck:
-\begin{verbatim}
-> source("http://bioconductor.org/biocLite.R")
-> biocLite("BiocCheck")
-\end{verbatim}
 
-2)BiocGenerics:
-\begin{verbatim}
-> source("http://bioconductor.org/biocLite.R")
-> biocLite("BiocGenerics")
-\end{verbatim}
-
-3)RUnit:
-\begin{verbatim}
-> install.packages("RUnit")
-\end{verbatim}
-
-4)Matrix:
-\begin{verbatim}
-> install.packages("Matrix")
-\end{verbatim}
-
+<<install-library, eval=FALSE>>=
+ biocLite(c("BiocCheck", "BiocGenerics", "RUnit"))
+@
 
 
 
@@ -137,16 +101,7 @@ Remark: To be added after uploaded to Bioconductor.
 \end{verbatim}
 
 If you install it from a local download, run the following command in a terminal from the same directory where you downloaded the package:
-\begin{verbatim}
-R CMD INSTALL samExploreR_1.0.0.tar.gz
-\end{verbatim}
-
-
-
-
-
-
-
+%\Rcode{R CMD INSTALL samExploreR_1.0.0.tar.gz}
 
 \section{Quick start}
 
@@ -157,37 +112,21 @@ In the following, we demonstrate briefly the usage of the samExploreR package an
 \item annotation file: Annot.gtf
 \end{itemize}
 
-
-
-
-
 In order to simulate $5$ repeats (N\_boot) for a virtual sequencing experiment with sequencing depth $f = 0.7$ execute:\\
 
-\begin{verbatim}
+<<Run-samExplore>>=
+  library(samExploreR)
 
- # Loading library
->  library(samExploreR)
+ ## perform subsampling
+inpf <- system.file("testdata", "Test1.sam", package="samExploreR")
 
- # Performing subsampling
-
-> inpf <- system.file("testdata", package="samExploreR")
-> inpf <- paste(inpf,"/","Test.sam",sep="")
-  
-> x <- samExplore(files=inpf, subsample_d = 0.85, N_boot=5)
-
-\end{verbatim}
+x <- samExplore(files=inpf,annot.inbuilt="hg19", subsample_d = 0.8)
+@ 
 This results in a 5-dimensional list, whereas each component corresponds to a subsampled count vectors.
-
-
-
-
-
-
-
 
 \section{The samExplore function}
 
-The function $samExplore$, which is our modification of the featureCounts function of \cite{liao2013featurecounts}, performs a summerization of reads to genomic features of annotation. 
+The function \Rcode{samExplore}, which is our modification of the featureCounts function of \cite{liao2013featurecounts}, performs a summerization of reads to genomic features of annotation. 
 
 The procedure of read subsampling works as follows:
 One of the input parameters is $f$, which is a fraction of reads that will be subsampled from the original SAM or BAM file,
@@ -206,81 +145,41 @@ Further input arguments of the function are:
 \item N\_boot: number of repeated experiments
 \end{itemize}
 As an output the function produces a vector of objects - results of featureCounts running.
- 
 
-
-
-\begin{verbatim}
+<<Run-samExplore>>=
  # Loading library
->  library(samExploreR)
+ library(samExploreR)
 
  # Performing subsampling
 
-> inpf <- system.file("testdata", package="samExploreR")
-> inpf <- paste(inpf,"/","Test.sam",sep="")
+ inpf <- system.file("testdata", "Test1.sam", package="samExploreR")
 
  # Performing robustness analysis for f = 0.7, number of replicates 5, 
  #annotation entries 'gene', non-paired reads
- > x <- samExplore(files=inpf,annot.inbuilt="mm9",GTF.featureType="exon",
+ x <- samExplore(files=inpf,annot.inbuilt="mm9",GTF.featureType="exon",
  GTF.attrType="gene_id", subsample_d = 0.8, N_boot=5)
 
  # Performing robustness analysis for f = 0.1, number of replicates 10, 
  #annotation entries 'exon', paired reads
- > x <- samExplore(files=inpf,annot.inbuilt="mm9",GTF.featureType="gene",
+ x <- samExplore(files=inpf,annot.inbuilt="mm9",GTF.featureType="gene",
  GTF.attrType="gene_id", subsample_d = 0.8, N_boot=5)
-
-
-
-
-\end{verbatim}
-
-
-
-
-
-
-
+@
 
 \section{exploreRob}
 
-A cornerstone of any scientific study is the question regarding the reproducibility and robustness of obtained results. The function $exploreRob$ allows the exploration of the robustness of results. It runs a standard one-way ANOVA test for groups of replicates, corresponding to different $f$ values, for one fixed annotation. In this way, one can measure if the result of the analysis changes significantly with a change in the parameter sequencing depth, $f$.
+A cornerstone of any scientific study is the question regarding the reproducibility and robustness of obtained results. The function $exploreRob$ allows the exploration of the robustness of results. It runs a standard one-way ANOVA test for groups of replicates, corresponding to different $f$ values, for one fixed annotation. In this way, one can measure if the result of the analysis changes significantly with a change in the parameter sequencing depth, \Rcode{f}.
 
-The function $exploreRob$ takes as input argument a data frame with the format shown in Tab. \ref{tab:expRob}.
-\begin{table}[h!]
-\begin{tabular}{ll*{6}{c}r}
-&Label & Variable& Value\\
-.&.&.&.\\
-1 &  New, Gene   &  0.40 &   55\\
- 2 & New, Exon  &   0.99  & 176\\
- 3 & Old, Gene  &   0.85 &   47\\
- 4 &Old, Gene   &  0.70   & 32\\
- 5 &New, Exon   &  0.85 &  128\\
- 6 &New, Gene  &   0.20   & 10\\
- 7 &New, Exon   &  0.25 &   28\\
- 8& Old, Gene   &  0.95   & 36\\
- 9 &New, Exon  &   0.99  & 173\\
- 10 &Old, Gene   &  0.90  &  42\\
- 11& Old, Gene  &   0.10   &  1\\
- 12 &Old, Gene   &  0.99  &  46\\
- 13 &New, Exon &    0.20  &  14\\
- 14 &New, Exon &    0.10  &   2\\
- 15 &Old, Gene   &  0.25  &   8\\
- 16 &New, Gene &    0.95  & 137\\
- 17 &New, Exon  &   0.95 &  180\\
- 18& New, Gene  &   0.25  &  19\\
- 19 &New, Exon   &  0.50  & 101\\
- 20& New, Gene  &   0.20  &   8\\
-.&.&.&.\\
-.&.&.&.\\
+The function \Rcode{exploreRob} takes as input argument a data frame with the format shown in Table below. \ref{tab:expRob}.
+<<>>=
+data(df_sole)
+head(df_sole)
+@
 
-\end{tabular}
-\caption{Input argument for the function $exploreRob$. \label{tab:expRob}}
-\end{table}
-In this table, the first column provides the labels for the annotation (lbl) used for the analysis, the second column gives the $f$ value and the third column provides the value of the metric to be explored, e.g., the number of differentially expressed genes. 
+In this table, the first column provides the labels for the annotation (lbl) used for the analysis, the second column gives the \Rcode{f} value and the third column provides the value of the metric to be explored, e.g., the number of differentially expressed genes. 
 
-The function $exploreRob$ splits this data frame up by considering only entries for one specific type of annotation. Then an ANOVA test is run for the groups of replicates that correspond to a given list of $f$ values, see Fig. \ref{fig1}.
+The function \Rcode{exploreRob} splits this data frame up by considering only entries for one specific type of annotation. Then an ANOVA test is run for the groups of replicates that correspond to a given list of $f$ values, see Fig. \ref{fig1}.
 
-For instance, to explore the robustness of the annotation type AnnotB cross the $f$ values $0.8$, $0.9$, $0.95$ for the data frame $df$ run:
+For instance, to explore the robustness of the annotation type AnnotB cross the \Rcode{f} values $0.8$, $0.9$, $0.95$ for the data frame \Rcode{df} run:
 
 
 %\begin{verbatim}
@@ -298,9 +197,9 @@ exploreRob(df_sole, lbl = 'New, Gene', f_vect = c(0.85, 0.9, 0.95))
 
 \section{exploreRep}
 
-Similar to $exploreRob$, the function $exploreRep$ allows the exploration of the reproducibility of results. This function runs a one-way ANOVA test for groups of replicates, corresponding to one $f$ value, across various annotation types. Thus, the influence of the annotation or the summarisation method can be explored. 
+Similar to \Rcode{exploreRob}, the function $exploreRep$ allows the exploration of the reproducibility of results. This function runs a one-way ANOVA test for groups of replicates, corresponding to one \Rcode{f} value, across various annotation types. Thus, the influence of the annotation or the summarisation method can be explored. 
 
-$exploreRep$ takes as input a data frame of form shown in Tab. \ref{tab:expRep}.
+\Rcode{exploreRep} takes as input a data frame of form shown in Tab. \ref{tab:expRep}.
 \begin{table}[h!]
 \begin{tabular}{ll*{6}{c}r}
 &Label & Variable& Value\\
@@ -321,11 +220,11 @@ $exploreRep$ takes as input a data frame of form shown in Tab. \ref{tab:expRep}.
 \end{tabular}
 \caption{Input argument for the function $exploreRep$. \label{tab:expRep}}
 \end{table}
-Here the first column provides the labels for the annotation used for the analysis, the second column gives the $f$ value and the third column provides the value of the metric to be explored, e.g., the number of differentially expressed genes. 
+Here the first column provides the labels for the annotation used for the analysis, the second column gives the \Rcode{f} value and the third column provides the value of the metric to be explored, e.g., the number of differentially expressed genes. 
 
-$exploreRep$ splits this data frame up to consider only results for one $f$ value. ANOVA test is run for groups of replicates with corresponding to given list of annotation labels , Fig \ref{fig1}.
+\Rcode{exploreRep} splits this data frame up to consider only results for one $f$ value. ANOVA test is run for groups of replicates with corresponding to given list of annotation labels , Fig \ref{fig1}.
 
-For instance, to explore the reproducibility for a $f$ value of $0.7$ cross the annotation types AnnotA, AnnotB, AnnotC  for data frame $df$ run:
+For instance, to explore the reproducibility for a $f$ value of $0.7$ cross the annotation types AnnotA, AnnotB, AnnotC  for data frame \Rcode{df} run:
 <<>>=
 #Loading library
 library(samExploreR)
@@ -335,18 +234,15 @@ data("df_sole")
 
 @
 
-
-
-
-
-
-
-
 \section{plotSamExplorer}
 
-This function generates boxplots of the metric under investigation, in our case for the number of differentially expressed genes, for different values of $f$.
+This function generates boxplots of the metric under investigation,
+in our case for the number of differentially expressed genes, 
+for different values of \Rcode{f}.
 
-The input argument of this function should be a {\it{data.frame}} object containing three columns with the names - {\it{Label}}, {\it{Variable}}, {\it{Value}}.
+The input argument of this function should be a {\it{data.frame}} object 
+containing three columns with the names - 
+{\it{Label}}, {\it{Variable}}, {\it{Value}}.
 
 The data should look like in the following example:
 \small{
@@ -373,7 +269,8 @@ require(samExploreR)
 data("df_sole")
 plotsamExplorer(df_sole,p.depth=.9,font.size=4, anova=TRUE)
 @
-\caption{\label{fig1} Boxplot of the number of differentially expressed genes for different sequence-depths $f$.  }
+\caption{\label{fig1} Boxplot of the number of differentially expressed 
+genes for different sequence-depths \Rcode{f}.  }
 }
 \end{center}
 \end{figure}
@@ -389,13 +286,11 @@ require(samExploreR)
 data("df_intersect")
 plotsamExplorer(df_intersect,font.size=3, anova=FALSE)
 @
-\caption{\label{fig2} Boxplot of the number of differentially expressed genes for different sequence-depths $f$.  }
+\caption{\label{fig2} Boxplot of the number of differentially expressed genes
+ for different sequence-depths \Rcode{f}.  }
 }
 \end{center}
 \end{figure}
-
-
-
 
 <<>>=
 sessionInfo()
@@ -403,9 +298,6 @@ sessionInfo()
 %\bibliographystyle{plain}
 
 \bibliography{Bibliography}     % Bibliography file (usually '*.bib' )
-
-
-
 \end{document}
 
 
